MDEV-27521 SIGSEGV in spider_parse_connect_info in MDEV-27106 branch

Add NULL check to SPIDER_OPTION_STR_LIST.